--- a/package.json
+++ b/package.json
@@ -9,10 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@supabase/supabase-js": "^2.58.0",
+    "@tanstack/react-query": "^5.90.2",
     "expo": "~54.0.10",
+    "expo-apple-authentication": "~8.0.7",
+    "expo-av": "~16.0.7",
+    "expo-file-system": "~19.0.15",
+    "expo-image": "~3.0.8",
+    "expo-notifications": "~0.32.11",
+    "expo-router": "~6.0.8",
+    "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
+    "nativewind": "^4.2.1",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-dom": "19.1.0",
+    "react-error-boundary": "^6.0.0",
+    "react-hook-form": "^7.63.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "tailwindcss": "^3.4.17",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
