--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "goalz-ai",
   "version": "1.0.0",
   "main": "index.ts",
+  "expo": {
+    "entryPoint": "./index.ts"
+  },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -11,6 +14,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-navigation/bottom-tabs": "^7.4.7",
+    "@react-navigation/native": "^7.1.17",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
     "expo": "~54.0.10",
