--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "expo-av": "~16.0.7",
     "expo-file-system": "~19.0.15",
     "expo-image": "~3.0.8",
+    "expo-linear-gradient": "^13.0.2",
     "expo-notifications": "~0.32.11",
     "expo-router": "~6.0.8",
     "expo-secure-store": "~15.0.7",
