--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.7",
     "@react-navigation/native": "^7.1.17",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
+    "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~54.0.10",
     "expo-apple-authentication": "~8.0.7",
     "expo-av": "~16.0.7",
@@ -38,6 +40,7 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.76"
   },
