--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/bottom-tabs": "^7.4.7",
-    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/bottom-tabs": "^7.4.0",
+    "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
     "@types/react-native-vector-icons": "^6.4.18",
-    "expo": "~54.0.10",
+    "expo": "~54.0.11",
     "expo-apple-authentication": "~8.0.7",
     "expo-av": "~16.0.7",
     "expo-file-system": "~19.0.15",
     "expo-image": "~3.0.8",
-    "expo-linear-gradient": "^13.0.2",
-    "expo-notifications": "~0.32.11",
-    "expo-router": "~6.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-notifications": "~0.32.12",
+    "expo-router": "~6.0.9",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
