--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "expo": "~54.0.11",
     "expo-apple-authentication": "~8.0.7",
+    "expo-audio": "^1.0.13",
     "expo-av": "~16.0.7",
     "expo-file-system": "~19.0.15",
     "expo-haptics": "~15.0.7",
