--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "lib": ["dom", "dom.iterable", "es6"]
   },
   "include": [
     "**/*.ts",
