--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "generate-db": "node generate-db.js"
   },
   "dependencies": {
+    "@expo/config-plugins": "~54.0.1",
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.2.2",
     "@modelcontextprotocol/sdk": "^1.18.2",
@@ -22,6 +23,7 @@
     "@react-native-community/datetimepicker": "^8.4.5",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/native": "^7.1.8",
+    "@skam22/watermelondb-expo-plugin": "^51.0.2",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
     "@types/react-native-vector-icons": "^6.4.18",
@@ -29,6 +31,7 @@
     "expo-apple-authentication": "~8.0.7",
     "expo-audio": "^1.0.13",
     "expo-av": "~16.0.7",
+    "expo-build-properties": "~1.0.9",
     "expo-file-system": "~19.0.15",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
@@ -45,12 +48,14 @@
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-quick-sqlite": "^8.2.7",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "^15.13.0",
     "react-native-vector-icons": "^10.3.0",
     "tailwindcss": "^3.4.17",
+    "undefined": "@nozbe/watermelondb/adapters/sqlite",
     "zod": "^3.25.76"
   },
   "devDependencies": {
