--- a/package.json
+++ b/package.json
@@ -19,14 +19,15 @@
     "@nozbe/sqlite": "^3.46.0",
     "@nozbe/watermelondb": "^0.28.0",
     "@react-native-async-storage/async-storage": "^2.2.0",
-    "@react-native-community/datetimepicker": "^8.4.5",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/native": "^7.1.8",
     "@supabase/supabase-js": "^2.58.0",
     "@tanstack/react-query": "^5.90.2",
     "@types/react-native-vector-icons": "^6.4.18",
-    "expo": "~54.0.11",
+    "expo": "54.0.12",
     "expo-apple-authentication": "~8.0.7",
+    "expo-asset": "^12.0.9",
     "expo-audio": "^1.0.13",
     "expo-av": "~16.0.7",
     "expo-file-system": "~19.0.15",
@@ -34,7 +35,7 @@
     "expo-image": "~3.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-notifications": "~0.32.12",
-    "expo-router": "~6.0.9",
+    "expo-router": "~6.0.10",
     "expo-secure-store": "~15.0.7",
     "expo-status-bar": "~3.0.8",
     "nativewind": "^4.2.1",
@@ -48,8 +49,9 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.13.0",
+    "react-native-svg": "15.12.1",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "0.5.1",
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.76"
   },
