update app name

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Goalz-AI",
-    "slug": "Goalz-AI",
+    "name": "Goals-AI",
+    "slug": "Goals-AI",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/Goals AI Logo.png",
