--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goals-ai",
   "version": "1.0.0",
-  "main": "index.ts",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "android": "expo run:android",
@@ -11,59 +11,64 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
-    "@google/generative-ai": "^0.24.1",
-    "@hookform/resolvers": "^5.2.2",
-    "@modelcontextprotocol/sdk": "^1.18.2",
-    "@nozbe/sqlite": "^3.46.0",
+    "@google/generative-ai": "^0.19.0",
+    "@hookform/resolvers": "^3.3.4",
+    "@modelcontextprotocol/sdk": "^1.0.2",
+    "@morrowdigital/watermelondb-expo-plugin": "^2.3.3",
+    "@nozbe/sqlite": "^3.45.0",
     "@nozbe/watermelondb": "^0.27.1",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.7.0",
-    "@react-navigation/bottom-tabs": "^6.5.0",
-    "@react-navigation/native": "^6.1.0",
-    "@skam22/watermelondb-expo-plugin": "^50.0.2",
-    "@supabase/supabase-js": "^2.58.0",
-    "@tanstack/react-query": "^5.90.2",
+    "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/native": "^6.1.17",
+    "@supabase/supabase-js": "^2.39.8",
+    "@tanstack/react-query": "^5.28.0",
     "@types/react-native-vector-icons": "^6.4.18",
-    "ajv": "^8.17.1",
+    "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
-    "expo": "~50.0.0",
+    "expo": "~50.0.17",
     "expo-apple-authentication": "~6.3.0",
-    "expo-asset": "~10.0.0",
-    "expo-av": "~13.10.0",
-    "expo-build-properties": "~0.11.0",
-    "expo-dev-client": "~3.3.0",
-    "expo-file-system": "~16.0.0",
-    "expo-haptics": "~12.8.0",
-    "expo-image": "~1.10.0",
-    "expo-linear-gradient": "~12.7.0",
-    "expo-linking": "~6.2.0",
-    "expo-media-library": "~15.9.0",
-    "expo-notifications": "~0.27.0",
-    "expo-router": "~3.4.0",
-    "expo-secure-store": "~12.8.0",
-    "expo-status-bar": "~1.11.0",
-    "nativewind": "^4.2.1",
+    "expo-asset": "9.0.2",
+    "expo-av": "~13.10.6",
+    "expo-build-properties": "~0.11.1",
+    "expo-constants": "~15.4.6",
+    "expo-dev-client": "~3.3.11",
+    "expo-file-system": "~16.0.9",
+    "expo-font": "~11.10.3",
+    "expo-haptics": "~12.8.1",
+    "expo-image": "~1.10.6",
+    "expo-linear-gradient": "~12.7.2",
+    "expo-linking": "~6.2.2",
+    "expo-media-library": "~15.9.2",
+    "expo-notifications": "~0.27.7",
+    "expo-router": "~3.4.10",
+    "expo-secure-store": "~12.8.1",
+    "expo-status-bar": "~1.11.1",
+    "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-error-boundary": "^6.0.0",
-    "react-hook-form": "^7.63.0",
+    "react-error-boundary": "^4.0.12",
+    "react-hook-form": "^7.51.0",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-quick-sqlite": "^8.2.7",
-    "react-native-reanimated": "~3.6.0",
+    "react-native-quick-sqlite": "^8.0.6",
+    "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "^0.6.1",
-    "tailwindcss": "^3.4.17",
-    "zod": "^3.25.76"
+    "react-native-vector-icons": "^10.0.3",
+    "tailwindcss": "3.3.2",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/react": "~18.2.0",
-    "better-sqlite3": "^12.4.1",
-    "typescript": "~5.3.0"
+    "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-decorators": "^7.24.0",
+    "@react-native-community/cli": "^13.6.6",
+    "@types/react": "~18.2.45",
+    "babel-preset-expo": "~10.0.1",
+    "better-sqlite3": "^9.4.3",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
