--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "expo-font": "~11.10.3",
     "expo-haptics": "~12.8.1",
     "expo-image": "~1.10.6",
+    "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
     "expo-media-library": "~15.9.2",
     "expo-notifications": "~0.27.7",
     "expo-router": "~3.4.10",
     "expo-secure-store": "~12.8.1",
+    "expo-sqlite": "~13.2.0",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -52,7 +54,6 @@
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "expo-sqlite": "~13.2.0",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
