--- a/app.json
+++ b/app.json
@@ -14,6 +14,7 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "pro.GoalAchieverAI",
+      "appleTeamId": "5PT3BWY2A5",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false,
         "NSCameraUsageDescription": "This app uses the camera to capture images for your goals.",
@@ -23,7 +24,7 @@
       },
       "entitlements": {
         "aps-environment": "development",
-        "com.apple.security.application-groups": ["group.${ios.bundleIdentifier}.onesignal"]
+        "com.apple.security.application-groups": ["group.pro.GoalAchieverAI.onesignal", "group.pro.GoalAchieverAI.widgets"]
       }
     },
     "android": {
@@ -53,7 +54,7 @@
         {
           "ios": {
             "useFrameworks": "static",
-            "deploymentTarget": "15.1"
+            "deploymentTarget": "18.0"
           },
           "android": {
             "kotlinVersion": "1.8.10",
@@ -65,9 +66,17 @@
           }
         }
       ],
+      [
+        "react-native-widget-extension",
+        {
+          "frequentUpdates": true,
+          "widgetsFolder": "widgets",
+          "deploymentTarget": "18.0",
+          "groupIdentifier": "group.pro.GoalAchieverAI.widgets"
+        }
+      ],
       "@morrowdigital/watermelondb-expo-plugin",
-      "expo-font",
-      "@bacons/apple-targets"
+      "expo-font"
     ],
     "extra": {
       "router": {},
