--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "generate-db": "node generate-db.js"
   },
   "dependencies": {
-    "@bacons/apple-targets": "^3.0.5",
     "@expo/vector-icons": "^14.0.0",
     "@google/generative-ai": "^0.19.0",
     "@hookform/resolvers": "^3.3.4",
@@ -64,6 +63,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-widget-extension": "^0.2.0",
     "tailwindcss": "3.3.2",
     "zod": "^3.22.4"
   },
