updated UI elements, integrated splash screen, and lots of other shit also lottie file

--- a/app.json
+++ b/app.json
@@ -67,7 +67,8 @@
         }
       ],
       "@morrowdigital/watermelondb-expo-plugin",
-      "expo-font"
+      "expo-font",
+      "lottie-react-native"
     ],
     "extra": {
       "router": {},
