--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@nozbe/watermelondb": "^0.27.1",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-community/datetimepicker": "7.7.0",
+    "@react-native-vector-icons/ionicons": "^12.3.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@supabase/supabase-js": "^2.39.8",
@@ -46,6 +47,7 @@
     "expo-secure-store": "~12.8.1",
     "expo-sqlite": "~13.2.0",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "6.5.1",
     "nativewind": "^2.0.11",
     "onesignal-expo-plugin": "^2.0.3",
     "react": "18.2.0",
@@ -62,7 +64,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
-    "react-native-vector-icons": "^10.0.3",
+    "react-native-vector-icons": "^10.3.0",
     "tailwindcss": "3.3.2",
     "zod": "^3.22.4"
   },
