--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "expo-secure-store": "~12.8.1",
     "expo-sqlite": "~13.2.0",
     "expo-status-bar": "~1.11.1",
-    "lottie-react-native": "6.5.1",
+    "lottie-react-native": "^6.5.1",
     "nativewind": "^2.0.11",
     "onesignal-expo-plugin": "^2.0.3",
     "react": "18.2.0",
