--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.3.0",
+    "react-native-widget-extension": "^0.2.0",
     "tailwindcss": "3.3.2",
     "zod": "^3.22.4"
   },
