FINALLY INSTALLED WIDGET AND SUCCESSFULL EAS DEV BUILD

--- a/app.json
+++ b/app.json
@@ -24,7 +24,6 @@
       },
       "entitlements": {
         "aps-environment": "development",
-        "com.apple.security.application-groups": ["group.pro.GoalAchieverAI.widgets"],
         "com.apple.developer.applesignin": ["Default"]
       }
     },
@@ -62,17 +61,9 @@
           }
         }
       ],
-      [
-        "react-native-widget-extension",
-        {
-          "frequentUpdates": true,
-          "widgetsFolder": "widgets",
-          "deploymentTarget": "16.2",
-          "groupIdentifier": "group.pro.GoalAchieverAI.widgets"
-        }
-      ],
       "@morrowdigital/watermelondb-expo-plugin",
-      "expo-font"
+      "expo-font",
+      ["./app.plugin", { "devTeamId": "5PT3BWY2A5" }]
     ],
     "extra": {
       "router": {},
