--- a/app.json
+++ b/app.json
@@ -24,7 +24,8 @@
       },
       "entitlements": {
         "aps-environment": "development",
-        "com.apple.developer.applesignin": ["Default"]
+        "com.apple.developer.applesignin": ["Default"],
+        "com.apple.security.application-groups": ["group.pro.GoalAchieverAI.widgetextension"]
       }
     },
     "android": {
