updated plugin & app.json

--- a/app.json
+++ b/app.json
@@ -64,7 +64,13 @@
       ],
       "@morrowdigital/watermelondb-expo-plugin",
       "expo-font",
-      ["./app.plugin", { "devTeamId": "5PT3BWY2A5" }]
+      [
+        "./app.plugin", 
+        { 
+          "devTeamId": "5PT3BWY2A5",
+          "appGroupId": "group.pro.GoalAchieverAI.widgetextension"
+        }
+      ]
     ],
     "extra": {
       "router": {},
