--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "yarn plugin:build"
   },
   "dependencies": {
+    "@expo/plist": "^0.4.7",
     "@expo/vector-icons": "^14.0.0",
     "@google/generative-ai": "^0.19.0",
     "@hookform/resolvers": "^3.3.4",
