--- a/eas.json
+++ b/eas.json
@@ -1,12 +1,16 @@
 {
   "cli": {
     "version": ">= 15.0.10",
-    "appVersionSource": "remote"
+    "appVersionSource": "remote",
+    "promptToConfigurePushNotifications": false
   },
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios": {
+        "credentialsSource": "local"
+      }
     },
     "preview": {
       "distribution": "internal"
