--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "ajv": "^8.12.0",
     "ajv-keywords": "^5.1.0",
+    "build": "^0.1.4",
     "expo": "~50.0.17",
     "expo-apple-authentication": "~6.3.0",
     "expo-asset": "9.0.2",
