--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@react-native-community/cli": "^13.6.6",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
+    "@types/node": "^24.9.0",
     "@types/react": "~18.2.45",
     "babel-preset-expo": "~10.0.1",
     "better-sqlite3": "^9.4.3",
