--- a/widget/ios/widget/widget.entitlements
+++ b/widget/ios/widget/widget.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.pro.GoalAchieverAI.widgetextension</string>
+		<string>group.pro.GoalAchieverAI</string>
 	</array>
 </dict>
 </plist>
