--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "14.1.0",
+    "react-native-user-defaults": "^0.1.5",
     "react-native-vector-icons": "^10.3.0",
     "tailwindcss": "3.3.2",
     "zod": "^3.22.4"
