--- a/widget/ios/widget/widget.entitlements
+++ b/widget/ios/widget/widget.entitlements
@@ -6,5 +6,7 @@
 	<array>
 		<string>group.pro.GoalAchieverAI</string>
 	</array>
+	<key>com.apple.developer.live-activities</key>
+	<true/>
 </dict>
 </plist>
