--- a/widget/ios/widget/widget.entitlements
+++ b/widget/ios/widget/widget.entitlements
@@ -8,5 +8,7 @@
 	</array>
 	<key>com.apple.developer.live-activities</key>
 	<true/>
+	<key>aps-environment</key>
+	<string>development</string>
 </dict>
 </plist>
