--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "postinstall": "npm run plugin:build"
   },
   "dependencies": {
+    "@bacons/apple-targets": "^3.0.5",
     "@expo/plist": "^0.4.7",
     "@expo/vector-icons": "^14.0.0",
     "@google/generative-ai": "^0.19.0",
@@ -77,7 +78,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/plugin-proposal-decorators": "^7.24.0",
-    "@expo/config-plugins": "^54.0.2",
+    "@expo/config-plugins": "^8.0.11",
     "@react-native-community/cli": "^13.6.6",
     "@types/fs-extra": "^11.0.4",
     "@types/glob": "^8.1.0",
