--- a/plugin/tsconfig.json
+++ b/plugin/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "extends": "expo-module-scripts/tsconfig.base",
   "compilerOptions": {
     "outDir": "./build",
     "rootDir": "./src",
@@ -7,8 +6,17 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "module": "commonjs",
-    "target": "es2018"
+    "target": "es2018",
+    "lib": ["es2018"],
+    "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
+    "strict": true,
+    "noImplicitReturns": true,
+    "noFallthroughCasesInSwitch": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["./src"],
-  "exclude": ["**/__tests__/**/*", "**/__mocks__/**/*"]
+  "exclude": ["**/__tests__/**/*", "**/__mocks__/**/*", "./build"]
 }
