--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "goals-ai",
   "version": "1.0.0",
-  "main": "expo-router/entry",
+  "main": "index.ts",
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
