fixed widget stylings

--- a/app.json
+++ b/app.json
@@ -26,6 +26,7 @@
       },
       "entitlements": {
         "aps-environment": "development",
+        "com.apple.developer.push-notification-service": true,
         "com.apple.developer.applesignin": ["Default"],
         "com.apple.security.application-groups": ["group.pro.GoalAchieverAI", "group.pro.GoalAchieverAI.onesignal"]
       }
