--- a/ios/GoalsAI/GoalsAI.entitlements
+++ b/ios/GoalsAI/GoalsAI.entitlements
@@ -9,9 +9,6 @@
 		<string>Default</string>
 	</array>
 	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.pro.GoalAchieverAI</string>
-		<string>group.pro.GoalAchieverAI.onesignal</string>
-	</array>
+	<array/>
 </dict>
 </plist>
