--- a/ios/PomodoroLiveActivity/PomodoroLiveActivity.entitlements
+++ b/ios/PomodoroLiveActivity/PomodoroLiveActivity.entitlements
@@ -5,8 +5,6 @@
 	<key>aps-environment</key>
 	<string>development</string>
 	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.pro.GoalAchieverAI.onesignal</string>
-	</array>
+	<array/>
 </dict>
 </plist>
