--- a/ios/GoalsAI/GoalsAI.entitlements
+++ b/ios/GoalsAI/GoalsAI.entitlements
@@ -8,6 +8,8 @@
     <array>
       <string>Default</string>
     </array>
+    <key>com.apple.developer.aps-environment</key>
+    <string>development</string>
     <key>com.apple.security.application-groups</key>
     <array>
       <string>group.pro.GoalAchieverAI</string>
