fixed attritbiutes live activity, widgetkiterloader info

--- a/app.json
+++ b/app.json
@@ -25,7 +25,7 @@
         "NSSupportsLiveActivities": true
       },
       "entitlements": {
-        "com.apple.developer.aps-environment": "development",
+        "aps-environment": "development",
         "com.apple.developer.applesignin": ["Default"],
         "com.apple.security.application-groups": ["group.pro.GoalAchieverAI", "group.pro.GoalAchieverAI.onesignal"]
       }
