--- a/ios/PomodoroLiveActivity/Info.plist
+++ b/ios/PomodoroLiveActivity/Info.plist
@@ -22,6 +22,8 @@
 	<dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.widgetkit-extension</string>
+		<key>NSExtensionPrincipalClass</key>
+		<string>PomodoroLiveActivity</string>
 	</dict>
 </dict>
 </plist>
