--- a/ios/PomodoroLiveActivity/PomodoroLiveActivity.entitlements
+++ b/ios/PomodoroLiveActivity/PomodoroLiveActivity.entitlements
@@ -2,11 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>aps-environment</key>
-	<string>development</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
+		<string>group.pro.GoalAchieverAI</string>
 		<string>group.pro.GoalAchieverAI.onesignal</string>
 	</array>
+	<key>com.apple.developer.usernotifications.live-activities</key>
+	<true/>
 </dict>
 </plist>
