--- a/targets/pomodoro-live-activity/PomodoroLiveActivity.entitlements
+++ b/targets/pomodoro-live-activity/PomodoroLiveActivity.entitlements
@@ -4,9 +4,8 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
+		<string>group.pro.GoalAchieverAI</string>
 		<string>group.pro.GoalAchieverAI.onesignal</string>
 	</array>
-	<key>com.apple.developer.usernotifications.live-activities</key>
-	<true/>
 </dict>
 </plist>
