--- a/app.json
+++ b/app.json
@@ -27,8 +27,7 @@
       "entitlements": {
         "aps-environment": "development",
         "com.apple.developer.applesignin": ["Default"],
-        "com.apple.security.application-groups": ["group.pro.GoalAchieverAI", "group.pro.GoalAchieverAI.onesignal"],
-        "com.apple.developer.usernotifications.live-activities": true
+        "com.apple.security.application-groups": ["group.pro.GoalAchieverAI", "group.pro.GoalAchieverAI.onesignal"]
       }
     },
     "android": {
