--- a/app.json
+++ b/app.json
@@ -21,13 +21,12 @@
         "NSCameraUsageDescription": "This app uses the camera to capture images for your goals.",
         "NSMicrophoneUsageDescription": "This app uses the microphone for voice input features.",
         "NSPhotoLibraryUsageDescription": "This app accesses your photo library to save and retrieve goal images.",
-        "UIBackgroundModes": ["remote-notification", "background-app-refresh", "background-processing"],
-        "NSSupportsLiveActivities": true
+        "UIBackgroundModes": ["remote-notification", "background-app-refresh", "background-processing"]
       },
       "entitlements": {
         "aps-environment": "development",
         "com.apple.developer.applesignin": ["Default"],
-        "com.apple.security.application-groups": ["group.pro.GoalAchieverAI", "group.pro.GoalAchieverAI.onesignal"]
+        "com.apple.security.application-groups": ["group.pro.GoalAchieverAI"]
       }
     },
     "android": {
@@ -70,7 +69,7 @@
         "./app.plugin", 
         { 
           "devTeamId": "5PT3BWY2A5",
-          "appGroupId": "group.pro.GoalAchieverAI.onesignal"
+          "appGroupId": "group.pro.GoalAchieverAI"
         }
       ]
     ],
