--- a/ios/widget/Info.plist
+++ b/ios/widget/Info.plist
@@ -4,10 +4,18 @@
 <dict>
 	<key>CFBundleDisplayName</key>
 	<string>Widget</string>
+	<key>CFBundleName</key>
+	<string>widget</string>
 	<key>CFBundleIdentifier</key>
 	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.0</string>
+	<key>CFBundlePackageType</key>
+	<string>XPC!</string>
+	<key>CFBundleInfoDictionaryVersion</key>
+	<string>6.0</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>NSExtension</key>
