--- a/ios/GoalsAI/GoalsAI.entitlements
+++ b/ios/GoalsAI/GoalsAI.entitlements
@@ -12,5 +12,7 @@
 	<array>
 		<string>group.pro.GoalAchieverAI</string>
 	</array>
+	<key>com.apple.developer.ActivityKit</key>
+	<true/>
 </dict>
 </plist>
