--- a/ios/GoalsAI/GoalsAI.entitlements
+++ b/ios/GoalsAI/GoalsAI.entitlements
@@ -11,6 +11,7 @@
     <key>com.apple.security.application-groups</key>
     <array>
       <string>group.pro.GoalAchieverAI</string>
+      <string>group.pro.GoalAchieverAI.onesignal</string>
     </array>
   </dict>
 </plist>
