--- a/ios/Podfile
+++ b/ios/Podfile
@@ -86,13 +86,16 @@ target 'GoalsAI' do
 end
 
 target 'widget' do
+  use_frameworks! :linkage => :static
   pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0'
 end
 
 target 'PomodoroLiveActivity' do
+  use_frameworks! :linkage => :static
   pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0'
 end
 
 target 'OneSignalNotificationServiceExtension' do
+  use_frameworks! :linkage => :static
   pod 'OneSignalXCFramework', '>= 5.0.0', '< 6.0'
 end
