--- a/app.json
+++ b/app.json
@@ -71,7 +71,7 @@
           "mode": "development",
           "devTeam": "5PT3BWY2A5",
           "iPhoneDeploymentTarget": "17.0",
-          "iosAppGroupId": "group.pro.GoalAchieverAI"
+          "appGroupId": "group.pro.GoalAchieverAI"
         }
       ],
       [
