--- a/app.json
+++ b/app.json
@@ -68,7 +68,10 @@
       [
         "onesignal-expo-plugin",
         {
-          "mode": "development"
+          "mode": "development",
+          "devTeam": "5PT3BWY2A5",
+          "iPhoneDeploymentTarget": "17.0",
+          "appGroupId": "group.pro.GoalAchieverAI"
         }
       ],
       [
