--- a/ios/GoalsAI/Info.plist
+++ b/ios/GoalsAI/Info.plist
@@ -69,6 +69,7 @@
     <array>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
       <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
+      <string>$(PRODUCT_BUNDLE_IDENTIFIER).expo.index_route</string>
     </array>
     <key>OneSignal_app_groups_key</key>
     <string>group.pro.GoalAchieverAI</string>
