--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,24 @@
   "files.associations": {
     "*.css": "tailwindcss"
   },
-  "json.schemaDownload.enable": false
+  "json.schemaDownload.enable": false,
+  "i18n-ally.localesPaths": ["src/locales"],
+  "i18n-ally.keystyle": "nested",
+  "i18n-ally.defaultNamespace": "translation",
+  "i18n-ally.sourceLanguage": "en",
+  "i18n-ally.displayLanguage": "en",
+  "i18n-ally.enabledFrameworks": ["react", "i18next"],
+  "i18n-ally.enabledParsers": ["json"],
+  "i18n-ally.pathMatcher": "{locale}/translation.json",
+  "i18n-ally.enabledLocales": ["en", "de", "fr"],
+  "i18n-ally.extract.autoDetect": true,
+  "i18n-ally.extract.keygenStyle": "camelCase",
+  "i18n-ally.extract.keygenStrategy": "slug",
+  "i18n-ally.extract.keyMaxLength": 50,
+  "i18n-ally.extract.targetPickingStrategy": "most-used",
+  "i18n-ally.extract.ignoredByFiles": {
+    "**/*.test.ts": ["*"],
+    "**/*.test.tsx": ["*"],
+    "**/node_modules/**": ["*"]
+  }
 }
