--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "expo-secure-store": "~12.8.1",
     "expo-sqlite": "~13.4.0",
     "expo-status-bar": "~1.11.1",
+    "i18next": "^25.6.0",
     "lottie-react-native": "^6.5.1",
     "nativewind": "^2.0.11",
     "onesignal-expo-plugin": "^2.0.3",
@@ -60,6 +61,7 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "^4.0.12",
     "react-hook-form": "^7.51.0",
+    "react-i18next": "^16.2.1",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
