integrate translation set up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,20 +13,26 @@
     "*.css": "tailwindcss"
   },
   "json.schemaDownload.enable": false,
-  "i18n-ally.localesPaths": ["src/locales"],
+  "i18n-ally.localesPaths": [
+    "src/locales",
+    "src/i18n",
+    "ios/Pods/RCT-Folly/folly/lang",
+    "ios/Pods/boost/boost/locale",
+    "ios/Pods/boost/boost/predef/language"
+  ],
   "i18n-ally.keystyle": "nested",
   "i18n-ally.defaultNamespace": "translation",
   "i18n-ally.sourceLanguage": "en",
   "i18n-ally.displayLanguage": "en",
   "i18n-ally.enabledFrameworks": ["react", "i18next"],
   "i18n-ally.enabledParsers": ["json"],
-  "i18n-ally.pathMatcher": "{locale}/translation.json",
+  "i18n-ally.pathMatcher": "{locale}.json",
   "i18n-ally.enabledLocales": ["en", "de", "fr"],
   "i18n-ally.extract.autoDetect": true,
   "i18n-ally.extract.keygenStyle": "camelCase",
   "i18n-ally.extract.keygenStrategy": "slug",
   "i18n-ally.extract.keyMaxLength": 50,
-  "i18n-ally.extract.targetPickingStrategy": "most-used",
+  "i18n-ally.extract.targetPickingStrategy": "most-similar",
   "i18n-ally.extract.ignoredByFiles": {
     "**/*.test.ts": ["*"],
     "**/*.test.tsx": ["*"],
