--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-linking": "~6.2.2",
+    "expo-localization": "^17.0.7",
     "expo-media-library": "~15.9.2",
     "expo-notifications": "~0.27.8",
     "expo-router": "~3.4.10",
