--- a/ios/OneSignalNotificationServiceExtension/OneSignalNotificationServiceExtension.entitlements
+++ b/ios/OneSignalNotificationServiceExtension/OneSignalNotificationServiceExtension.entitlements
@@ -4,6 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
+		<string>group.pro.GoalAchieverAI.onesignal</string>
 		<string>group.pro.GoalAchieverAI</string>
 	</array>
 </dict>
