--- a/ios/GoalsAI/GoalsAI.entitlements
+++ b/ios/GoalsAI/GoalsAI.entitlements
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>aps-environment</key>
-	<string>production</string>
-	<key>com.apple.developer.applesignin</key>
-	<array>
-		<string>Default</string>
-	</array>
-	<key>com.apple.security.application-groups</key>
-	<array>
-		<string>group.pro.GoalAchieverAI</string>
-	</array>
-</dict>
+  <dict>
+    <key>aps-environment</key>
+    <string>production</string>
+    <key>com.apple.developer.applesignin</key>
+    <array>
+      <string>Default</string>
+    </array>
+    <key>com.apple.security.application-groups</key>
+    <array>
+      <string>group.pro.GoalAchieverAI</string>
+      <string>group.pro.GoalAchieverAI.onesignal</string>
+    </array>
+  </dict>
 </plist>
