--- a/app.json
+++ b/app.json
@@ -71,7 +71,8 @@
         {
           "mode": "production",
           "devTeam": "5PT3BWY2A5",
-          "iPhoneDeploymentTarget": "17.0"
+          "iPhoneDeploymentTarget": "17.0",
+          "iosNSE": false
         }
       ],
       [
